@@ -1,4 +1,5 @@
 0.2
 	- Fixed glitches in Alfred's Adventure, Chuck Rock
 	- Fixed RTC progressing day one hour late
+	- Fixed sound problems in Casper
 	- Savestates, SRAMs and configfiles are now placed in the appdata dir, not alongside the ROM anymore
